--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/css/mypage.css">
 
     <!-- CSRF 토큰 메타 태그 추가 -->
-<!--    <meta name="csrf-token" th:content="${_csrf.token}">-->
+    <meta name="csrf-token" th:content="${_csrf.token}">
 
     <!-- 자바스크립트 나중에 -->
     <!-- <script src="/assets/js/jquery-3.6.0.min.js"></script> -->
